h2 h3 and some css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <title>RPGs Anonymous</title>
   <link rel="stylesheet" href="assests/css/style.css">
+  <link rel="icon" type="image/favicon" href="./assests/images/favicon.ico">
 </head>
 
 <body>
@@ -32,46 +33,95 @@
   </header>
 
   <!-- hero/jumbotron -->
-  <section>
+  <section class="hero">
+    <div class="hero-links">
+      <h3>Join & Support!</h3>
+      <p>Links</p>
+      <label for="twith">Live Stream:</label>
+      <a href="https://www.twitch.tv/rpgsanonymous" target="_blank">Twitch</a><br>
+      <label for="podiant">Donate:</label>
+      <a href="https://rpgsanonymous.podiant.co/" target="_blank">Podiant</a><br>
+      <label for="youtube">Archive</label>
+      <a href="https://www.youtube.com/channel/UCz6afPABdYtqtg-aYKvUYLQ" target="_blank">YouTube</a><br>
+      <label for="twitter">Social:</label>
+      <a href="https://twitter.com/RPGsAnonymous1?s=20" target="_blank">Twitter</a><br>
+      <label for="discord">Chat:</label>
+      <a href="https://discord.gg/aTE3EQh" target="_blank">Discord</a><br>
+      <label for="email">Email:</label>
+      <a href="rpgsanonymous@gmail.com" target="_blank">rpgsanonymous@gmail.com</a> 
+    </div>
+
   </section>
 
   <!-- "about us" section -->
   <section>
     <h2>About Us</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+      </p>
   </section>
 
   <!-- "the adventure so far" section -->
   <section>
-    <h2>The Adventure So Far:</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+    <div class=box>
+      <h2>The Adventure So Far:</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
         itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+    </div>
   </section>
 
   <!-- "meet the cast" section -->
   <section>
-    <h2>Meet The Cast</h2>
-      <h3>Zac: DM/Fits</h3>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
-      <h3>Aaron: Carl Nelson</h3>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
-      <h3>Kolby: Shane "Goose" Bailey</h3>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
-      <h3>Jacob: Steve "Tyke" Stevenson</h3>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+    <div class=box>
+      <h2>Meet The Cast</h2>
+        <h3>Zac: DM/Fits</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+        <h3>Aaron: Carl Nelson</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+        <h3>Kolby: Shane "Goose" Bailey</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+        <h3>Jacob: Steve "Tyke" Stevenson</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+    </div>
   </section>
 
   <!-- "supporters" section -->
   <section>
-    <h2>Supporters</h2>
+    <div class="box">
+      <h2>Supporters</h2>
+        <h3>Donators</h3>
+          <p>
+            @...<br>@...<br>@...
+          </p>
+        <h3>Subscribers</h3>
+          <p>
+            @...<br>@...<br>@...
+          </p>
+        <h3>Third catagory (too many followers?)</h3>
+          <p>
+            @...<br>@...<br>@...
+          </p>
+    </div>
   </section>
 
-  <!-- "join the club today" section -->
+  <!-- "other projects" section -->
   <section>
-      <h2>Join The Club Today!</h2>
+      <div class="box">
+        <h2>Other Projects</h2>
+          <h3>Nerd Chat</h3>
+            <p>
+              ...
+            </p>
+          <h3>The Ace of Clubs</h3>
+            <p>
+              ...
+            </p>
+      </div>
   </section>
 
   <!-- footer -->
