header css changes

--- a/index.html
+++ b/index.html
@@ -63,71 +63,72 @@
   </section>
 
   <!-- "the adventure so far" section -->
-  <section>
-    <div class=box>
-      <h2>The Adventure So Far:</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
-    </div>
-  </section>
+  <div class=main-content>
+    <section>
+        <div class=box>
+        <h2>The Adventure So Far:</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+        </div>
+    </section>
 
-  <!-- "meet the cast" section -->
-  <section>
-    <div class=box>
-      <h2>Meet The Cast</h2>
-        <h3>Zac: DM/Fits</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
-        <h3>Aaron: Carl Nelson</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
-        <h3>Kolby: Shane "Goose" Bailey</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
-        <h3>Jacob: Steve "Tyke" Stevenson</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
-    </div>
-  </section>
+    <!-- "meet the cast" section -->
+    <section>
+        <div class=box>
+        <h2>Meet The Cast</h2>
+            <h3>Zac: DM/Fits</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+            <h3>Aaron: Carl Nelson</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+            <h3>Kolby: Shane "Goose" Bailey</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+            <h3>Jacob: Steve "Tyke" Stevenson</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+        </div>
+    </section>
 
-  <!-- "supporters" section -->
-  <section>
-    <div class="box">
-      <h2>Supporters</h2>
-        <h3>Donators</h3>
-          <p>
-            @...<br>@...<br>@...
-          </p>
-        <h3>Subscribers</h3>
-          <p>
-            @...<br>@...<br>@...
-          </p>
-        <h3>Third catagory (too many followers?)</h3>
-          <p>
-            @...<br>@...<br>@...
-          </p>
-    </div>
-  </section>
-
-  <!-- "other projects" section -->
-  <section>
-      <div class="box">
-        <h2>Other Projects</h2>
-          <h3>Nerd Chat</h3>
+    <!-- "supporters" section -->
+    <section>
+        <div class="box">
+        <h2>Supporters</h2>
+            <h3>Donators</h3>
             <p>
-              ...
+                @...<br>@...<br>@...
             </p>
-          <h3>The Ace of Clubs</h3>
+            <h3>Subscribers</h3>
             <p>
-              ...
+                @...<br>@...<br>@...
             </p>
-      </div>
-  </section>
+            <h3>Third catagory (too many followers?)</h3>
+            <p>
+                @...<br>@...<br>@...
+            </p>
+        </div>
+    </section>
 
-  <!-- footer -->
-  <footer>
-    <h2>Footer Things</h2>
-  </footer>
+    <!-- "other projects" section -->
+    <section>
+        <div class="box">
+            <h2>Other Projects</h2>
+            <h3>Nerd Chat</h3>
+                <p>
+                ...
+                </p>
+            <h3>The Ace of Clubs</h3>
+                <p>
+                ...
+                </p>
+        </div>
+    </section>
+  </div>
+    <!-- footer -->
+    <footer>
+        <h2>Footer Things</h2>
+    </footer>
 </body>
 
 </html>
