bunch more edits. I need to get better at commits

--- a/index.html
+++ b/index.html
@@ -34,21 +34,23 @@
 
   <!-- hero/jumbotron -->
   <section class="hero">
-    <div class="hero-links">
+    <div class="hero-support">
       <h3>Join & Support!</h3>
-      <p>Links</p>
-      <label for="twith">Live Stream:</label>
-      <a href="https://www.twitch.tv/rpgsanonymous" target="_blank">Twitch</a><br>
-      <label for="podiant">Donate:</label>
-      <a href="https://rpgsanonymous.podiant.co/" target="_blank">Podiant</a><br>
-      <label for="youtube">Archive</label>
-      <a href="https://www.youtube.com/channel/UCz6afPABdYtqtg-aYKvUYLQ" target="_blank">YouTube</a><br>
-      <label for="twitter">Social:</label>
-      <a href="https://twitter.com/RPGsAnonymous1?s=20" target="_blank">Twitter</a><br>
-      <label for="discord">Chat:</label>
-      <a href="https://discord.gg/aTE3EQh" target="_blank">Discord</a><br>
-      <label for="email">Email:</label>
-      <a href="rpgsanonymous@gmail.com" target="_blank">rpgsanonymous@gmail.com</a> 
+      <p>Links:</p>
+      <div class="links">
+        <label for="twith">Stream:</label>
+        <a href="https://www.twitch.tv/rpgsanonymous" target="_blank">Twitch</a><br><br>
+        <label for="podiant">Donate:</label>
+        <a href="https://rpgsanonymous.podiant.co/" target="_blank">Podiant</a><br><br>
+        <label for="youtube">Archive</label>
+        <a href="https://www.youtube.com/channel/UCz6afPABdYtqtg-aYKvUYLQ" target="_blank">YouTube</a><br><br>
+        <label for="twitter">Social:</label>
+        <a href="https://twitter.com/RPGsAnonymous1?s=20" target="_blank">Twitter</a><br><br>
+        <label for="discord">Chat:</label>
+        <a href="https://discord.gg/aTE3EQh" target="_blank">Discord</a><br><br>
+        <label for="email">Email:</label>
+        <a href="rpgsanonymous@gmail.com" target="_blank">rpgsanonymous@gmail.com</a>
+      </div>
     </div>
 
   </section>
@@ -73,21 +75,61 @@
     </section>
 
     <!-- "meet the cast" section -->
-    <section>
+    <section id="cast-members">
         <div class=box>
-        <h2>Meet The Cast</h2>
-            <h3>Zac: DM/Fits</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+          <h2>Meet The Cast</h2>
+            <article class="cast">
+              <img src="./assests/images/Fitz.jpg" alt="portrait of Zac's character" />
+              <div class="cast-bio">
+              <h3>Zac: DM/Fits</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                  itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p><br>
+              </div>
+            </article>
+
+            <article class="cast">
+              <img src="./assests/images/Carl.jpg" alt="portrait of Aaron's character" />
+              <div class="cast-bio">
+              <h3>Aaron: Carl Nelson</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                  itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p><br>
+              </div>
+            </article>
+
+            <article class="cast">
+              <img src="./assests/images/Goose.jpg" alt="portrait of Kolby's character" />
+              <div class="cast-bio">
+              <h3>Kolby: Shane "Goose" Bailey</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                  itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p><br>
+              </div>
+            </article>
+
+            <article class="cast">
+              <img src="./assests/images/Tyke.jpg" alt="portrait of Jacob's character" />
+              <div class="cast-bio">
+              <h3>Jacob: Steve "Tyke" Stevenson</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                  itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p><br>
+            </article>
+
+            <article class="cast">
+              <img src="./assests/images/Zed.jpg" alt="portrait of Nic's character" />
+              <div class="cast-bio">
+              <h3>Nic: Dr. Zedekiah "Zed" Velkyn</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p><br>
+              </div>
+            </article>
+
+            <article class="cast">
+              <img src="./assests/images/Momo.jpg" alt="the prettiest kitty ever" />
+              <div class="cast-bio">
+              <h3>Momo</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
                 itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
-            <h3>Aaron: Carl Nelson</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
-            <h3>Kolby: Shane "Goose" Bailey</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
-            <h3>Jacob: Steve "Tyke" Stevenson</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+              </div>
+            </article>
         </div>
     </section>
 
