--- a/index.html
+++ b/index.html
@@ -68,16 +68,23 @@
   <div class=main-content>
     <section>
         <div class=box>
-        <h2>The Adventure So Far:</h2>
+        <button onclick-"myFunction()">
+          The Adventure So Far
+        </button>
+          <div id="so-far">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
             itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+          </div>
         </div>
     </section>
 
     <!-- "meet the cast" section -->
-    <section id="cast-members">
+    <section>
         <div class=box>
-          <h2>Meet The Cast</h2>
+          <button onclick="myFunction()">
+            Meet The Cast
+          </button>
+            <div id="cast-members">
             <article class="cast">
               <img src="./assests/images/Fitz.jpg" alt="portrait of Zac's character" />
               <div class="cast-bio">
@@ -130,13 +137,17 @@
                 itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
               </div>
             </article>
+            </div>
         </div>
     </section>
 
     <!-- "supporters" section -->
     <section>
         <div class="box">
-        <h2>Supporters</h2>
+        <button onclick="myFunction()">
+          Supporters
+        </button>
+          <div id="supporters">
             <h3>Donators</h3>
             <p>
                 @...<br>@...<br>@...
@@ -149,21 +160,26 @@
             <p>
                 @...<br>@...<br>@...
             </p>
+          </div>
         </div>
     </section>
 
     <!-- "other projects" section -->
     <section>
         <div class="box">
-            <h2>Other Projects</h2>
-            <h3>Nerd Chat</h3>
-                <p>
-                ...
-                </p>
-            <h3>The Ace of Clubs</h3>
-                <p>
-                ...
-                </p>
+            <button onclick="myFunction()">
+              Other Projects
+            </button>
+              <div id="other-projects">
+                <h3>Nerd Chat</h3>
+                    <p>
+                    ...
+                    </p>
+                <h3>The Ace of Clubs</h3>
+                    <p>
+                    ...
+                    </p>
+              </div>
         </div>
     </section>
   </div>
