added button js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <title>RPGs Anonymous</title>
   <link rel="stylesheet" href="assests/css/style.css">
+  <script type="text/javascript" src="./assests/js/script.js"></script>
   <link rel="icon" type="image/favicon" href="./assests/images/favicon.ico">
 </head>
 
@@ -68,7 +69,7 @@
   <div class=main-content>
     <section>
         <div class=box>
-        <button onclick-"myFunction()">
+        <button onclick="myFunction1()">
           The Adventure So Far
         </button>
           <div id="so-far">
@@ -81,7 +82,7 @@
     <!-- "meet the cast" section -->
     <section>
         <div class=box>
-          <button onclick="myFunction()">
+          <button onclick="myFunction2()">
             Meet The Cast
           </button>
             <div id="cast-members">
@@ -144,7 +145,7 @@
     <!-- "supporters" section -->
     <section>
         <div class="box">
-        <button onclick="myFunction()">
+        <button onclick="myFunction3()">
           Supporters
         </button>
           <div id="supporters">
@@ -167,7 +168,7 @@
     <!-- "other projects" section -->
     <section>
         <div class="box">
-            <button onclick="myFunction()">
+            <button onclick="myFunction4()">
               Other Projects
             </button>
               <div id="other-projects">
