css button divs start hidden

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
   </section>
 
   <!-- "the adventure so far" section -->
-  <div class=main-content>
+  <div class="main-content">
     <section>
-        <div class=box>
+        <div class="box">
         <button onclick="myFunction1()">
           The Adventure So Far
         </button>
@@ -81,7 +81,7 @@
 
     <!-- "meet the cast" section -->
     <section>
-        <div class=box>
+        <div class="box">
           <button onclick="myFunction2()">
             Meet The Cast
           </button>
