add flexbox to header

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <!-- "about us" section -->
   <section>
-    <h2>About Us</h2>
+    <h2 id="about-us">About Us</h2>
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
         itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
