add flexbox to the hero

--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
 
   <!-- hero/jumbotron -->
   <section class="hero">
+    <div class="hero-textblock">
+      <h2>...</h2>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+      </p>
+    </div>
+    
     <div class="hero-support">
       <h3>Join & Support!</h3>
       <p>Links:</p>
