add flex-row class and properties

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
       </p>
     </div>
-    
+
     <div class="hero-support">
       <h3>Join & Support!</h3>
       <p>Links:</p>
@@ -65,7 +65,11 @@
 
   <!-- "about us" section -->
   <section>
-    <h2 id="about-us">About Us</h2>
+    <div class="flex-row">
+      <h2 id="about-us">
+        About Us
+      </h2>
+    </div>  
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
         itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
@@ -76,9 +80,11 @@
   <div class="main-content">
     <section>
         <div class="box">
-        <button onclick="myFunction1()">
-          The Adventure So Far
-        </button>
+        <div class="flex-row">
+          <button class="section-title" onclick="myFunction1()">
+            The Adventure So Far
+          </button>
+        </div>
           <div id="so-far">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
             itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
@@ -94,9 +100,11 @@
     <!-- "meet the cast" section -->
     <section>
         <div class="box">
-          <button onclick="myFunction2()">
-            Meet The Cast
-          </button>
+          <div class="flex-row">
+            <button class="section-title" onclick="myFunction2()">
+              Meet The Cast
+            </button>
+          </div>
             <div id="cast-members">
             <article class="cast">
               <img src="./assests/images/Fitz.jpg" alt="portrait of Zac's character" />
@@ -157,9 +165,11 @@
     <!-- "supporters" section -->
     <section>
         <div class="box">
-        <button onclick="myFunction3()">
-          Supporters
-        </button>
+        <div class="flex-row">
+          <button class="section-title" onclick="myFunction3()">
+            Supporters
+          </button>
+        </div>
           <div id="supporters">
             <h3>Donators</h3>
             <p>
@@ -180,9 +190,11 @@
     <!-- "other projects" section -->
     <section>
         <div class="box">
-            <button onclick="myFunction4()">
+          <div class="flex-row">
+            <button class="section-title" onclick="myFunction4()">
               Other Projects
             </button>
+          </div>
               <div id="other-projects">
                 <h3>Nerd Chat</h3>
                     <p>
