adjusted media queries for screen sizes

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
   </section>
 
   <!-- "about us" section -->
-  <section>
+  <section id="about-us">
     <div class="flex-row">
-      <h2 id="about-us">
+      <h2>
         About Us
       </h2>
     </div>  
