added twitch icon and set max dimensions for it.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <p>Links:</p>
       <div class="links">
         <label for="twith">Stream:</label>
-        <a href="https://www.twitch.tv/rpgsanonymous" target="_blank">Twitch</a><br><br>
+        <a href="https://www.twitch.tv/rpgsanonymous" target="_blank">Twitch <img class = "icon"src="/assests/images/twitch.png" alt=""></a><br><br>
         <label for="podiant">Donate:</label>
         <a href="https://rpgsanonymous.podiant.co/" target="_blank">Podiant</a><br><br>
         <label for="youtube">Archive</label>
